# lab

lab1/: CMakePresets.json  CMakelists.txt
lab1/source/: Source1.cpp
lab2/source/: Source1.cpp
lab3/source/: Source1.cpp
lab4/source/: Source1.cpp
lab5/source/: Source1.cpp
lab6/: CMakePresets.json  CMakelists.txt
lab6/source/: Source1.cpp
lab7/source/: Source1.cpp
lab8_rasterization_skeleton1/: CMakeLists.txt  output.ppm
lab8_rasterization_skeleton1/source/: raster3d.cpp
lab9_init/: CMakeLists.txt  launch.vs.json
lab9_init/shaders/: simple.frag  simple.vert
lab9_init/source/: MyGlWindow.cpp  MyGlWindow.h  Program.cpp  Program.h  Source.cpp  Viewer.cpp  Viewer.h  cow.cpp  cow_data.h  cowvbo.h
